Fix SQL keywords being invisible, and change gist style theme

--- a/gist-style.css
+++ b/gist-style.css
@@ -1,148 +1,119 @@
+/* source: https://github.com/lonekorean/gist-syntax-themes/blob/master/stylesheets/terminal.css */
+
 body .gist .highlight {
-    background: #272822;
+    background: #000;
 }
 body .gist .blob-num,
 body .gist .blob-code-inner,
-body .gist .pl-s2,
-body .gist .pl-stj {
-    color: #f8f8f2;
-}
-body .gist .pl-c1 {
-    color: #ae81ff;
-}
-body .gist .pl-enti {
-    color: #a6e22e;
-    font-weight: 700;
-}
-body .gist .pl-st {
-    color: #66d9ef;
-}
-body .gist .pl-mdr {
-    color: #66d9ef;
-    font-weight: 400;
-}
-body .gist .pl-ms1 {
-    background: #fd971f;
+body .gist .pl-en,
+body .gist .pl-sc,
+body .gist .highlight-source-css .pl-k,
+body .gist .highlight-source-css .pl-ent {
+    color: #dedede;
 }
 body .gist .pl-c,
-body .gist .pl-c span,
-body .gist .pl-pdc {
-    color: #75715e;
+body .gist .pl-c span {
+    color: #ff4500;
     font-style: italic;
 }
-body .gist .pl-cce,
-body .gist .pl-cn,
-body .gist .pl-coc,
-body .gist .pl-enc,
-body .gist .pl-ens,
-body .gist .pl-kos,
-body .gist .pl-kou,
-body .gist .pl-mh .pl-pdh,
-body .gist .pl-mp,
-body .gist .pl-mp1 .pl-sf,
-body .gist .pl-mq,
-body .gist .pl-pde,
-body .gist .pl-pse,
-body .gist .pl-pse .pl-s2,
-body .gist .pl-mp .pl-s3,
-body .gist .pl-smi,
-body .gist .pl-stp,
-body .gist .pl-sv,
-body .gist .pl-v,
-body .gist .pl-vi,
-body .gist .pl-vpf,
-body .gist .pl-mri,
-body .gist .pl-va,
-body .gist .pl-vpu {
-    color: #66d9ef;
-}
-body .gist .pl-cos,
-body .gist .pl-ml,
-body .gist .pl-pds,
-body .gist .pl-s,
-body .gist .pl-s1,
-body .gist .pl-sol {
-    color: #e6db74;
-}
-body .gist .pl-e,
-body .gist .pl-ef,
-body .gist .pl-en,
-body .gist .pl-enf,
-body .gist .pl-enm,
-body .gist .pl-entc,
-body .gist .pl-entm,
-body .gist .pl-eoac,
-body .gist .pl-eoac .pl-pde,
-body .gist .pl-eoi,
-body .gist .pl-mai .pl-sf,
-body .gist .pl-mm,
-body .gist .pl-pdv,
-body .gist .pl-som,
-body .gist .pl-sr,
-body .gist .pl-vo {
-    color: #a6e22e;
-}
-body .gist .pl-ent,
-body .gist .pl-eoa,
-body .gist .pl-eoai,
-body .gist .pl-eoai .pl-pde,
-body .gist .pl-k,
-body .gist .pl-ko,
-body .gist .pl-kolp,
-body .gist .pl-mc,
-body .gist .pl-mr,
-body .gist .pl-ms,
-body .gist .pl-s3,
-body .gist .pl-smc,
-body .gist .pl-smp,
-body .gist .pl-sok,
-body .gist .pl-sra,
-body .gist .pl-src,
-body .gist .pl-sre {
-    color: #f92672;
-}
-body .gist .pl-mb,
-body .gist .pl-pdb {
-    color: #e6db74;
+body .gist .pl-mb {
+    color: #e78c45;
     font-weight: 700;
 }
-body .gist .pl-mi,
-body .gist .pl-pdi {
-    color: #f92672;
+body .gist .pl-mh .pl-en {
+    color: #b9ca4a;
+    font-weight: 700;
+}
+body .gist .pl-mi {
+    color: #ff6347;
     font-style: italic;
 }
-body .gist .pl-pdc1,
-body .gist .pl-scp {
-    color: #ae81ff;
+body .gist .pl-mq {
+    color: #ff4500;
 }
-body .gist .pl-sc,
-body .gist .pl-sf,
+body .gist .pl-id {
+    color: #ced2cf;
+    background: #b798bf;
+}
+body .gist .pl-ii {
+    color: #ff0;
+    background: red;
+}
+body .gist .highlight-source-js .pl-k {
+    color: #ff1493;
+}
+body .gist .pl-c1,
+body .gist .pl-s1 .pl-pse .pl-s2,
+body .gist .pl-sv,
+body .gist .pl-vpf {
+    color: #e78c45;
+}
+body .gist .pl-e,
+body .gist .pl-s3,
+body .gist .pl-sr,
+body .gist .pl-sr .pl-sra,
+body .gist .pl-sr .pl-sre,
+body .gist .pl-src,
+body .gist .pl-v,
+body .gist .highlight-text-html-basic .pl-ent,
+body .gist .highlight-text-html-php .pl-vo {
+    color: #d54e53;
+}
+body .gist .pl-ent,
+body .gist .pl-k,
+body .gist .pl-mdh,
+body .gist .pl-mdr,
+body .gist .pl-ml,
+body .gist .pl-mm,
 body .gist .pl-mo,
-body .gist .pl-entl {
-    color: #fd971f;
+body .gist .pl-mp,
+body .gist .pl-mr,
+body .gist .pl-ms,
+body .gist .pl-s,
+body .gist .pl-s1 .pl-v,
+body .gist .pl-st {
+    color: #ff6347;
+}
+body .gist .pl-mh,
+body .gist .pl-pds,
+body .gist .pl-s1,
+body .gist .pl-sr .pl-cce {
+    color: #b9ca4a;
+}
+body .gist .pl-s1 .pl-s2,
+body .gist .pl-smi,
+body .gist .pl-smp,
+body .gist .pl-stj,
+body .gist .pl-vo,
+body .gist .highlight-text-html-php .pl-s3,
+body .gist .highlight-source-python .pl-s3 {
+    color: #7aa6da;
 }
 body .gist .pl-mi1,
 body .gist .pl-mdht {
-    color: #a6e22e;
+    color: #dedede;
     background: rgba(0, 64, 0, .5);
 }
 body .gist .pl-md,
 body .gist .pl-mdhf {
-    color: #f92672;
-    background: rgba(64, 0, 0, .5);
+    color: #dedede;
+    background: red;
 }
-body .gist .pl-mdh,
-body .gist .pl-mdi {
-    color: #a6e22e;
-    font-weight: 400;
+body .gist .highlight-source-css .pl-s3,
+body .gist .highlight-source-css .pl-sc {
+    color: #e7c547;
 }
-body .gist .pl-ib,
-body .gist .pl-id,
-body .gist .pl-ii,
-body .gist .pl-iu {
-    background: #a6e22e;
-    color: #272822;
+
+/* My modifications */
+
+/* Stylesheet doesn't know what to do with certain SQL keywords, and was made
+  black by default, so I changed the default text color in that span to be a
+  more visible color */
+body .gist .pl-s .pl-s1, .gist .pl-smi {
+  color: grey;
 }
-body .gist-meta {
-  display: none;
+
+/* Remove the "hosted on Github" banner" */
+body .gist .gist-meta {
+    display: none;
 }
